layout issues
resolved more layout issues

--- a/css/style.css
+++ b/css/style.css
@@ -2195,6 +2195,9 @@ footer h4:hover {
     padding-left: 4px;
     margin-bottom: 50px;
   }
+  strong {
+    padding-top: 30px;
+  }
   #cells {
     padding-right: 0px;
   }
@@ -2617,11 +2620,12 @@ footer h4:hover {
     grid-template-columns: auto auto auto auto auto auto auto;
     grid-column-gap: 0.5%;
     margin: 0;
-    width: 105vw;
+    width: 110vw;
   }
   .nav-item {
     display: inline-block;
     width: 100%;
+    margin: 0 auto;
     padding-left: 0px;
   }
   .nav-item-1 {
@@ -2838,6 +2842,9 @@ footer h4:hover {
   }
 }
 @media screen and (min-width: 1025px) {
+  .page-image {
+    width: 120vw;
+  }
   .main-blocks-2 .primary-inner h3 {
     padding-bottom: 220px;
     margin-left: -20px;
@@ -2871,7 +2878,7 @@ footer h4:hover {
   }
   .nav {
     padding-left: 90px;
-    padding-right: 90px;
+    padding-right: 160px;
   }
   .caption-text {
     padding-top: 40px;
@@ -2946,8 +2953,12 @@ footer h4:hover {
   }
   .container-2 {
     display: grid;
-    grid-template-columns: 35% 10% 10% 20% auto;
-    padding-left: 20px;
+    padding-top: 10px;
+    padding-right: 12%;
+    grid-template-columns: auto auto auto auto auto;
+    grid-column-gap: 0.5%;
+    margin: 0;
+    width: 110vw;
   }
   .search-bar {
     display: inline-block;
@@ -2955,6 +2966,10 @@ footer h4:hover {
   }
   .input-group-mb-3 {
     display: inline-block;
+  }
+  nav {
+    width: 120vw;
+    padding-right: 20px;
   }
   .glass {
     display: none;
@@ -2965,16 +2980,33 @@ footer h4:hover {
     margin-bottom: 0px;
     padding-top: 22px;
   }
+  .main-carousel {
+    width: 120vw;
+  }
 }
 @media screen and (min-width: 1260px) {
   .main-blocks {
     padding-right: 130px;
   }
   .main-blocks-2 {
-    margin-right: 280px;
+    width: 95%;
+    height: 80%;
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-column-gap: 1%;
+    grid-row-gap: 1%;
+    position: relative;
+    right: 4.1%;
   }
-  .btn-primary-4 h3 {
+  .main-block-2 .primary-inner h3 {
+    margin-left: 12px;
+  }
+  .btn-primary-4 .primary-inner h3, .btn-primary-5 .primary-inner h3 {
     margin-bottom: 10px;
+    margin-left: 0px;
+  }
+  .btn-primary-6 .primary-inner h3, .btn-primary-7 .primary-inner h3 {
+    margin-left: 5px;
   }
   .primary-inner #read {
     position: relative;
@@ -3023,7 +3055,7 @@ footer h4:hover {
     left: 95px;
   }
   #graph {
-    left: 90px;
+    left: 30px;
   }
   #hat {
     left: 90px;
@@ -3047,8 +3079,14 @@ footer h4:hover {
     position: relative;
     left: 180px;
   }
-  .main-image {
-    width: 180%;
+  .overlay-block {
+    height: 563px;
+  }
+  .nav-item-1 {
+    display: inline-block;
+    width: 100%;
+    margin: 0 auto;
+    padding-left: 0px;
   }
 }
 /*# sourceMappingURL=style.css.map *//*# sourceMappingURL=style.css.map */
